cli/tests/snapshots/help__btrfs_qgroup_show.snap
---
source: cli/tests/help.rs
expression: text
---
List subvolume quota groups

Shows all quota groups (qgroups) and their space accounting. Each subvolume
automatically gets a level-0 qgroup (e.g. 0/256) that tracks its individual
usage. Higher-level qgroups (1/0, 2/0, ...) can be created to group subvolumes
and apply shared limits across them.

Columns:

qgroupid: the quota group identifier in level/id format. Level 0 corresponds to
individual subvolumes. Higher levels are user-created grouping containers.

rfer (referenced): total bytes of data referenced by this qgroup. For level-0
qgroups this is the logical size of all extents in the subvolume. Shared extents
(e.g. from snapshots or reflinks) are counted in full by each qgroup that
references them.

excl (exclusive): bytes used exclusively by this qgroup, not shared with any
other qgroup at the same level. This is the space that would be freed if the
subvolume were deleted (assuming no other references).

max_rfer: the configured limit on referenced bytes. Writes that would exceed
this limit fail with EDQUOT. Shows "none" if no limit is set.

max_excl: the configured limit on exclusive bytes. Shows "none" if no limit is
set.

In --format modern, the qgroup hierarchy is shown as a tree: higher- level
qgroups appear as parents with their member qgroups nested below using tree
connectors.

Usage: show [OPTIONS] <PATH>

Arguments:
  <PATH>
          Path to a mounted btrfs filesystem

Options:
      --sort <SORT>
          Sort by a comma-separated list of fields (qgroupid, rfer, excl,
          max_rfer, max_excl)

      --sync
          Force a sync before getting quota information

  -h, --help
          Print help (see a summary with '-h')

Column selection:
  -p, --print-parent
          Print parent qgroup id

  -c, --print-child
          Print child qgroup id

  -r, --print-rfer-limit
          Print limit of referenced size

  -e, --print-excl-limit
          Print limit of exclusive size

Filtering:
  -F, --filter-all
          List all qgroups impacting path, including ancestral qgroups

  -f, --filter-direct
          List all qgroups impacting path, excluding ancestral qgroups

Size units:
      --raw
          Show raw numbers in bytes

      --human-readable
          Show human friendly numbers, base 1024 (default)

      --iec
          Use 1024 as a base (IEC units)

      --si
          Use 1000 as a base (SI units)

      --kbytes
          Show sizes in KiB

      --mbytes
          Show sizes in MiB

      --gbytes
          Show sizes in GiB

      --tbytes
          Show sizes in TiB
