cli/tests/snapshots/help__btrfs_quota.snap
---
source: cli/tests/help.rs
expression: text
---
Manage filesystem quota settings.

Enable or disable quotas, configure quota rescan operations, and view quota
status. Quotas allow enforcing limits on filesystem usage by subvolume or quota
group. Quota operations require CAP_SYS_ADMIN.

Usage: quota <COMMAND>

Commands:
  enable   Enable subvolume quota support for a filesystem
  disable  Disable subvolume quota support for a filesystem
  rescan   Trash all qgroup numbers and scan the metadata again
  status   Show status information about quota on the filesystem
  help     Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help (see a summary with '-h')
