cli/tests/snapshots/help__btrfs_quota_disable.snap
---
source: cli/tests/help.rs
expression: text
---
Disable subvolume quota support for a filesystem

Usage: disable <PATH>

Arguments:
  <PATH>
          Path to a mounted btrfs filesystem

Options:
  -h, --help
          Print help
