cli/tests/snapshots/help__btrfs_quota_status.snap
---
source: cli/tests/help.rs
expression: text
---
Show status information about quota on the filesystem

Usage: status [OPTIONS] <PATH>

Arguments:
  <PATH>
          Path to a mounted btrfs filesystem

Options:
      --is-enabled
          Only check if quotas are enabled, without printing full status

  -h, --help
          Print help
