cli/tests/snapshots/help__btrfs_receive.snap
---
source: cli/tests/help.rs
expression: text
---
Receive subvolumes from a stream.

Read a btrfs send stream and recreate subvolumes on the destination filesystem.
Streams can be received incrementally based on a parent subvolume to only apply
changes. Multiple streams can be received in sequence. The destination
filesystem must be mounted and writable. Requires CAP_SYS_ADMIN.

Usage: receive [OPTIONS] [MOUNT]

Arguments:
  [MOUNT]
          Mount point of the destination filesystem (not required with --dump)

Options:
  -f, --file <FILE>
          Read the stream from FILE instead of stdin

  -e, --terminate-on-end
          Terminate after receiving an end-cmd marker

  -C, --chroot
          Confine the process to directory using chroot

  -E, --max-errors <MAX_ERRORS>
          Terminate after NERR errors (0 means unlimited)

  -m, --root-mount <ROOT_MOUNT>
          The root mount point of the destination filesystem

      --force-decompress
          Always decompress instead of using encoded I/O

      --dump
          Dump stream metadata without requiring the mount parameter

  -h, --help
          Print help (see a summary with '-h')
